Fixed header spacing

--- a/client/src/components/Cover/PendingCoverage/PendingCoverage.css
+++ b/client/src/components/Cover/PendingCoverage/PendingCoverage.css
@@ -18,7 +18,7 @@
   margin: auto;
   padding: 1%;
   padding-left: 2%;
-  margin-bottom: 3%;
+  margin-bottom: 4%;
   background: white;
   border-radius: 10px;
   font-family: "Open Sans", sans-serif;
